@@ -1,6 +1,10 @@
 20140118
  - (dtucker) [uidswap.c] Prevent unused variable warnings on Cygwin.  Patch
    from vinschen at redhat.com
+ - (dtucker) [openbsd-compat/bsd-cygwin_util.h] Add missing function
+   declarations that stopped being included when we stopped including
+   <windows.h> from openbsd-compat/bsd-cygwin_util.h.  Patch from vinschen at
+   redhat.com.
 
 20140117
  - (dtucker) [aclocal.m4 configure.ac] Add some additional compiler/toolchain
